--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -88,7 +88,7 @@
     .testBorder {
       width: 100%;
       aspect-ratio: 1/1;
-      @include wood.straight-grain-1-pine-dark-border-bg(50px);
+      @include wood.straight-grain-1-pine-dark-border-bg(50px, $top: false);
       border-radius: 10px;
 
       .testBorderContent {
