Because bo rder image does not allow the use of different gradients for each borde r, the wood grain around the dropdown of the navbar all went the same d irection, which is not what a real wooden drawer looks like. Thus, a transparent background with vertical gradients on the left and right sides and horizontal gradients on the top and bottom sides was added to the navbar to give the illusion of the top of an open wooden drawer. The option to use border images was also removed in the wood theme file.

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -88,7 +88,7 @@
     .testBorder {
       width: 100%;
       aspect-ratio: 1/1;
-      @include wood.straight-grain-1-pine-dark-border-bg(50px, $top: false);
+      @include wood.straight-grain-1-pine-dark-border-bg(50px);
       border-radius: 10px;
 
       .testBorderContent {
