--- a/src/styles/_wood-theme.scss
+++ b/src/styles/_wood-theme.scss
@@ -1,4 +1,4 @@
-//variables 
+// VARIABLES
 
 $basswood-light0: rgb(240, 216, 121);
 $basswood-light1: rgb(213, 193, 116);
@@ -30,6 +30,8 @@ $ebony-dark2: rgb(0, 0, 0);
 
 $default-background-size: 50px;
 
+// FUNCTIONS
+
 @function straight-grain-1($degree: 0deg, $color0, $color1, $color2, $size: $default-background-size) {
   $parameters: 
     $degree, 
@@ -50,6 +52,8 @@ $default-background-size: 50px;
 
 }
 
+
+// MIX-INS
 
 /* START OF BACKGROUNDS */
 
@@ -127,86 +131,8 @@ $default-background-size: 50px;
   );
 }
 
-
-
-/* START OF BORDER IMAGES */
-
-@mixin straight-grain-1-border($degree: 0deg, $slice, $color0, $color1, $color2) {
-  border-image: straight-grain-1($degree, $color0, $color1, $color2);
-  border-image-slice: $slice;
-}
-
-@mixin straight-grain-1-basswood-light-border($degree: 0deg, $slice) {
-  @include straight-grain-1-border(
-    $degree, 
-    $slice,
-    $basswood-light0, 
-    $basswood-light1, 
-    $basswood-light2
-  );
-}
-
-@mixin straight-grain-1-pine-light-border($degree: 0deg, $slice) {
-  @include straight-grain-1-border(
-    $degree, 
-    $slice,
-    $pine-light0, 
-    $pine-light1, 
-    $pine-light2
-  );
-}
-
-@mixin straight-grain-1-pine-dark-border($degree: 0deg, $slice) {
-  @include straight-grain-1-border(
-    $degree, 
-    $slice,
-    $pine-dark0, 
-    $pine-dark1, 
-    $pine-dark2
-  );
-}
-
-@mixin straight-grain-1-walnut-light-border($degree: 0deg, $slice) {
-  @include straight-grain-1-border(
-    $degree, 
-    $slice,
-    $walnut-light0, 
-    $walnut-light1, 
-    $walnut-light2
-  );
-}
-
-@mixin straight-grain-1-walnut-dark-border($degree: 0deg, $slice) {
-  @include straight-grain-1-border(
-    $degree, 
-    $slice,
-    $walnut-dark0, 
-    $walnut-dark1, 
-    $walnut-dark2
-  );
-}
-
-@mixin straight-grain-1-ebony-light-border($degree: 0deg, $slice) {
-  @include straight-grain-1-bg(
-    $degree, 
-    $slice
-    $ebony-light0, 
-    $ebony-light1, 
-    $ebony-light2
-  );
-}
-
-@mixin straight-grain-1-ebony-dark-border($degree: 0deg, $slice) {
-  @include straight-grain-1-bg(
-    $degree, 
-    $slice
-    $ebony-dark0, 
-    $ebony-dark1, 
-    $ebony-dark2
-  );
-}
-
 /* START OF BORDER BACKGROUNDS */
+
 //Creates a background with a "border" with a width specified by
 //padding. The user can also specify which borders they want visible
 //( any combination of (top, left, bottom, right)
@@ -361,7 +287,3 @@ $default-background-size: 50px;
 @mixin straight-grain-1-ebony-dark-border-bg($padding, $top: true, $bottom: true, $left: true, $right: true) {
   @include straight-grain-1-border-bg($padding, $ebony-dark0, $ebony-dark1, $ebony-dark2, $top, $bottom, $left, $right);
 }
-
-
-
-
