Added padding to top and bottom parts of main element in / route.

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -3,7 +3,7 @@
 .main {
   display: block;
   @include wood.straight-grain-1-walnut-dark-bg(0deg);
-  padding: 0 5%;
+  padding: 1em 5%;
 
   text-align: center;
 
