--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -70,16 +70,17 @@
     }
   }
 
-  .aboutWrapper {
+  .cardContainer {
+    width: 100%;
+    display: grid;
+    grid-auto-rows: 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1em;
+    justify-content: center;
+  }
 
-    .cardContainer {
-      width: 100%;
-      display: grid;
-      grid-auto-rows: 1fr;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1em;
-      justify-content: center;
-    }
+  .cardContainer.projects {
+    grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
   }
 
   .skillWrapper {
