Completed the footer component by adding contact information, a NextJS logo, and a copyright notice.

--- a/src/styles/global-variables.scss
+++ b/src/styles/global-variables.scss
@@ -1,6 +1,6 @@
 $navbar-height: 70px;
 $navbar-padding: 20px;
-$footer-height: 70px;
+$min-footer-height: 250px;
 
 $gold1: rgb(228, 232, 0);
 $gold2: rgb(255, 238, 1);
