--- a/src/components/footer-styles.module.scss
+++ b/src/components/footer-styles.module.scss
@@ -2,11 +2,109 @@
 @use "global-variables" as globals;
 
 .footer {
-  height: globals.$footer-height;
+  display: block;
+
+  min-height: globals.$min-footer-height;
+  padding: 1em 2em;
   @include wood.straight-grain-1-walnut-light-bg(0deg);
 
-  a {
-    text-decoration: none;
-    color: blue;
+  color: wood.$basswood-light0;
+
+  .contentWrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+
+    .contactInfo {
+      .social-container-footer {
+        display: block;
+        //padding-left: 1em;
+    
+        list-style: none;
+    
+        li {
+          padding: 5px;
+    
+          a {
+            display: inline-block; //required so that it expands to fit imgs
+            color: wood.$basswood-light0;
+    
+            .icons {
+              display: inline-block;
+        
+              width: 32px;
+              height: 32px;
+              mask-size: cover; //expand SVG to fill entire div
+              background: wood.$basswood-light0; //color of SVG
+            }
+      
+            .iconDesc {
+              display: inline-block;
+              padding-left: 10px;
+              
+              //center div vertically
+              position: relative;
+              top: 50%;
+              transform: translateY(-50%);
+            }
+        
+            //use masks so that color of SVG can match the background.
+            .iconEmail {
+              mask-image: url("/iconmonstr-email-10.svg");
+            }
+            .iconGithub {
+              mask-image: url("/iconmonstr-github-4.svg");
+            }
+            .iconLinkedin {
+              mask-image: url("/iconmonstr-linkedin-4.svg");
+            }
+          }
+        }
+      }
+    }
+
+    .nextjs {
+      display: block;
+      text-align: center;
+
+      .nextjsLogo {
+        width: 200px;
+        height: 100px;
+        margin: auto; //center logo
+
+        mask-size: cover;
+        mask-image: url("/nextjs.svg");
+        background: wood.$basswood-light0;
+      }
+    }
+  }
+  
+
+  .copyright {
+    text-align: center;
+  }
+  
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    .contentWrapper {
+      flex-direction: column;
+      align-items: center;
+
+      gap: 2em;
+
+      .contactInfo {
+        h1 {
+          text-align: center;
+        }
+      }
+    }
+
+    .copyright {
+      margin-top: 3em;
+    }
   }
 }
