Added subheadings to the / and /woodgallery routes.

--- a/src/app/woodgallery/page.module.scss
+++ b/src/app/woodgallery/page.module.scss
@@ -17,6 +17,16 @@
     @include wood.straight-grain-1-pine-dark-bg(0deg);
   }
 
+  h2 {
+    padding: 0.5em;
+    margin: 1em 0;
+
+    border-radius: 10px;
+
+    color: wood.$pine-light0;
+    @include wood.straight-grain-1-walnut-light-bg(0deg);
+  }
+
   .pictureContainer {
     width: 100%;
     display: grid;
