--- a/src/components/frame.module.scss
+++ b/src/components/frame.module.scss
@@ -1,17 +1,31 @@
 @use "wood-theme" as wood;
 
-.pictureFrame {
-  width: 100%;
-  aspect-ratio: 1/1;
-  @include wood.straight-grain-1-pine-dark-border-bg(20px);
-  border-radius: 10px;
+.frame {
+  .pictureContainer {
+    @include wood.straight-grain-1-pine-dark-border-bg(20px);
+    border-radius: 10px;
 
-  .picture {
     width: 100%;
-    height: 100%;
+    height: auto;
+    
+    overflow: hidden;
+  
+    .picture {
+      display: block; //MUST USE THIS to remove small gap on bottom of image caused by images being inline by default
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .caption {
-    
+    margin: 1em;
+    padding: 0.5em;
+
+    color: wood.$ebony-light0;
+    font-weight: bold;
+    text-align: center;
+
+    @include wood.straight-grain-1-pine-dark-bg(0deg);
+    border-radius: 10px;
   }
 }
