Started adding articles for the blog in /src/posts and set up a blog post handler script in the /src/lib folder to retrieve all files in the posts directory and display their front matter onto the blog page as cards.

--- a/src/app/blog/page.module.scss
+++ b/src/app/blog/page.module.scss
@@ -1,5 +1,16 @@
 .blog {
-  h1 {
-    color: orange;
+  display: block;
+  padding: 1em 5%;
+
+  text-align: center;
+
+
+  .cardContainer {
+    width: 100%;
+    display: grid;
+    grid-auto-rows: 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1em;
+    justify-content: center;
   }
 }
