Added basic dynamic route for blog posts so that when a card from the list of articles in the /blog route is selected, the website navigates to that articles generated HTML page.

--- a/src/app/blog/page.module.scss
+++ b/src/app/blog/page.module.scss
@@ -5,6 +5,7 @@
   text-align: center;
 
 
+  
   .cardContainer {
     width: 100%;
     display: grid;
@@ -12,5 +13,9 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1em;
     justify-content: center;
+
+    a {
+      text-decoration: none;
+    }
   }
 }
