Rewrote blog-post-handler so that files in the post directory don't exclusively require a .md extension.

--- a/src/components/card.module.scss
+++ b/src/components/card.module.scss
@@ -13,6 +13,8 @@
   font-weight: bold;
   line-height: 1.5em;
 
+  text-decoration: none; //for when .card is an anchor
+
   a {
     color: wood.$basswood-light0;
   }
