--- a/src/app/blog/page.module.scss
+++ b/src/app/blog/page.module.scss
@@ -1,3 +1,5 @@
+@use 'wood-theme' as wood;
+
 .blog {
   display: block;
   padding: 1em 5%;
@@ -5,17 +7,21 @@
   text-align: center;
 
 
-  
-  .cardContainer {
-    width: 100%;
-    display: grid;
-    grid-auto-rows: 1fr;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1em;
-    justify-content: center;
-
+  .tagList {
+    display: inline-block;
     a {
+      display: inline-block;
+      margin: 0.5em;
+      padding: 0.5em;
+  
+  
+      @include wood.straight-grain-1-pine-dark-bg(0deg);
+      border-radius: 10px;
+      color: wood.$ebony-dark2;
       text-decoration: none;
+      text-align: center;
+      font-weight: bold;
     }
   }
+  
 }
