--- a/src/app/blog/page.module.scss
+++ b/src/app/blog/page.module.scss
@@ -2,10 +2,13 @@
 
 .blog {
   .tagList {
-    display: inline-block;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-columns: 1fr; //make all elements the same width
+    gap: 1em;
+
     a {
-      display: inline-block;
-      margin: 0.5em;
+     // display: inline-block;
       padding: 0.5em;
   
   
@@ -14,6 +17,7 @@
       color: wood.$ebony-dark2;
       text-decoration: none;
       text-align: center;
+      white-space: nowrap; //dont let letters wrap around in text
       font-weight: bold;
     }
   }
