Added thumbnail of resume that can be clicked on so that the browser opens up a new tab to view the PDF.

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -73,32 +73,13 @@
     }
   }
 
-
-  .resumeButton {
-    margin: 1em;
-    padding: 1em;
-    width: 70%;
-    max-width: 600px;
-    cursor: pointer;
-
-    transition: filter 0.5s;
-    filter: brightness(100%);
-
-    @include wood.straight-grain-1-pine-dark-bg(0deg);
-    border-radius: 10px;
-   // box-shadow: 0 0 10px 10px rgba(0,0,0,0.5);
-
-    color: wood.$ebony-dark2;
-    font-size: 2em;
-    font-weight: bold;
-
-    &:hover {
-      filter: brightness(60%);
-    }
+  //used in order to reduce the size of the Frame component inside
+  //this element
+  .resumeWrapper {
+    min-width: 300px;    
+    width: 60%;
+    margin: auto;
   }
-
-  
-  
 }
 
 @media screen and (max-width: 900px) {
