Added styling for individual blog posts. Also removed bug where raw HTML in Markdown would not be parsed. Also removed the text-align: center CSS property from the main-page-wrapper to avoid issues with text formatting in blogs.

--- a/src/components/page-navigator.module.scss
+++ b/src/components/page-navigator.module.scss
@@ -44,6 +44,7 @@ $elementWidth: 15%;
 
     padding: 0.5em;
     color: wood.$ebony-dark2;
+    text-align: center;
     font-size: 1.5em;
     font-weight: bold;
     white-space: nowrap; //dont let letters wrap around in text
