--- a/src/app/blog/[tag]/page.module.scss
+++ b/src/app/blog/[tag]/page.module.scss
@@ -6,7 +6,7 @@
     width: 100%;
     display: grid;
     grid-auto-rows: 1fr;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 400px));
     gap: 1em;
     justify-content: center;
 
