--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -58,13 +58,13 @@
     width: 100%;
     display: grid;
     grid-auto-rows: 1fr;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 500px));
     gap: 1em;
     justify-content: center;
   }
 
   .cardContainer.projects {
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 500px));
   }
 
   .skillWrapper {
