--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -49,6 +49,7 @@ html {
 
 
 
+  
   h1 {
     padding: 0.5em;
     margin: 1em 0;
@@ -63,7 +64,8 @@ html {
 
   h2 {
     padding: 0.5em;
-    margin: 1em 0;
+ //   margin: 1em 1em;
+    margin: 1em 0em;
 
     text-align: center;
 
