Added support for MDX files so that React components can be used in markdown. Also added a css attribute to Frame component so that it can be resized.

--- a/src/components/frame.module.scss
+++ b/src/components/frame.module.scss
@@ -21,6 +21,7 @@
       display: block; //MUST USE THIS to remove small gap on bottom of image caused by images being inline by default
       width: 100%;
       height: 100%;
+      max-width: 100%;
     }
   }
 
