Added outline button component in order to make a button that stands out from the other wood-based components and links. It uses a wooden border with text and a transparent background. In the future, I may find a font where all the letters are the same height and a connected together so that the entire button looks like it was cut out from one piece of wood.

--- a/src/styles/_wood-theme.scss
+++ b/src/styles/_wood-theme.scss
@@ -52,6 +52,34 @@ $default-background-size: 50px;
 
 }
 
+@function straight-grain-1-basswood-light($degree: 0deg, $size: $default-background-size) {
+  @return straight-grain-1($degree, $basswood-light0, $basswood-light1, $basswood-light2, $size);
+}
+
+@function straight-grain-1-pine-light($degree: 0deg, $size: $default-background-size) {
+  @return straight-grain-1($degree, $pine-light0, $pine-light1, $pine-light2, $size);
+}
+
+@function straight-grain-1-pine-dark($degree: 0deg, $size: $default-background-size) {
+  @return straight-grain-1($degree, $pine-dark0, $pine-dark1, $pine-dark2, $size);
+}
+
+@function straight-grain-1-walnut-light($degree: 0deg, $size: $default-background-size) {
+  @return straight-grain-1($degree, $walnut-light0, $walnut-light1, $walnut-light2, $size);
+}
+
+@function straight-grain-1-walnut-dark($degree: 0deg, $size: $default-background-size) {
+  @return straight-grain-1($degree, $walnut-dark0, $walnut-dark1, $walnut-dark2, $size);
+}
+
+@function straight-grain-1-ebony-light($degree: 0deg, $size: $default-background-size) {
+  @return straight-grain-1($degree, $ebony-light0, $ebony-light1, $ebony-light2, $size);
+}
+
+@function straight-grain-1-ebony-dark($degree: 0deg, $size: $default-background-size) {
+  @return straight-grain-1($degree, $ebony-dark0, $ebony-dark1, $ebony-dark2, $size);
+}
+
 
 // MIX-INS
 
