--- a/src/components/tag-container.module.scss
+++ b/src/components/tag-container.module.scss
@@ -1,22 +1,9 @@
-@use 'wood-theme' as wood;
-
 .tagList {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 400px));
   grid-auto-columns: 1fr; //make all elements the same width
+  grid-auto-rows: 1fr; 
+  justify-content: center;
   gap: 1em;
 
-  a {
-   // display: inline-block;
-    padding: 0.5em;
-
-
-    @include wood.straight-grain-1-pine-dark-bg(0deg);
-    border-radius: 10px;
-    color: wood.$ebony-dark2;
-    text-decoration: none;
-    text-align: center;
-    white-space: nowrap; //dont let letters wrap around in text
-    font-weight: bold;
-  }
 }
