Added list of tags to each blog post card, rewrote the TagList component so that it appears over every /blog and /blog/[tag] route, with the current tag being search for highlighted. Also added list of additional posts to look at after a user finishes reading a blog post. Also added a Miscellaneous tag for blog posts that have no tags.

--- a/src/components/outline-button.module.scss
+++ b/src/components/outline-button.module.scss
@@ -2,6 +2,12 @@
 
 $borderRadius: 10px;
 
+@mixin active-button-properties() {
+  color: black;
+  background-clip: border-box;
+  border-radius: $borderRadius;
+}
+
 .button {
 
   /*
@@ -53,11 +59,12 @@ $borderRadius: 10px;
   text-align: center;
   white-space: nowrap; //dont let letters wrap around in text
   font-weight: bold;
-
-  &:hover {
-    color: black;
-    background-clip: border-box;
-    border-radius: $borderRadius;
-  }
 }
 
+.button.interact:hover {
+  @include active-button-properties();
+}
+
+.button.active {
+  @include active-button-properties();
+}
