--- a/src/components/frame.module.scss
+++ b/src/components/frame.module.scss
@@ -22,11 +22,13 @@
       width: 100%;
       height: 100%;
       max-width: 100%;
+      
+      border-radius: 0;
     }
   }
 
   .caption {
-    margin: 1em;
+    margin: 1em auto;
     padding: 0.5em;
 
     color: wood.$ebony-light0;
