--- a/src/components/modal-image.module.scss
+++ b/src/components/modal-image.module.scss
@@ -1,87 +1,93 @@
 @use 'wood-theme' as wood;
 
 .modal {
-  display: none; //hidden by default
 
-  //cover entire screen
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  .popup {
+    display: none; //hidden by default
 
-  z-index: 999; //display above everything, even the navbar
-
-  background: rgba(0,0,0,0.7); //add semi-transparent background
-
-  overflow: auto; //enable scroll if needed
-
+    //cover entire screen
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   
-
-
-  .close {
-    position: absolute;
-
-    cursor: pointer;
-
-    user-select: none; //dont allow user to highlight or select text from close button
-
-    //keep in top right corner
-    top: 15px; //15 pixels below top
-    right: 35px; //35 pixels left of the rightmost side
-
-    font-size: 60px;
-    font-weight: bold;
-
-    //give X a wood gradient
-    @include wood.straight-grain-1-basswood-light-bg(0deg);
-    background-clip: text;
-    color: transparent;
-    
+    z-index: 999; //display above everything, even the navbar
+  
+    background: rgba(0,0,0,0.7); //add semi-transparent background
+  
+    overflow: auto; //enable scroll if needed
+  
+  
+    .close {
+      position: absolute;
+  
+      cursor: pointer;
+  
+      user-select: none; //dont allow user to highlight or select text from close button
+  
+      //keep in top right corner
+      top: 15px; //15 pixels below top
+      right: 35px; //35 pixels left of the rightmost side
+  
+      font-size: 60px;
+      font-weight: bold;
+  
+      //give X a wood gradient
+      @include wood.straight-grain-1-basswood-light-bg(0deg);
+      background-clip: text;
+      color: transparent;
+      
+    }
+  
+    .image {
+      display: block; //avoids weird behavior caused by img being inline by default
+      margin: auto;
+      padding-top: 100px;
+  
+      width: 80%;
+      max-width: 700px; //dont make image absurdly huge
+  
+    }
+  
+    .caption {
+      //same as image
+      display: block;
+      margin: 50px auto;
+      width: 80%; 
+      max-width: 700px;
+  
+      padding: 10px;
+  
+      border-radius: 10px;
+  
+      text-align: center;
+      font-weight: bold;
+  
+      @include wood.straight-grain-1-pine-light-bg(0deg);
+  
+      color: wood.$ebony-dark0;
+  
+    }
   }
-
-  .image {
-    display: block; //avoids weird behavior caused by img being inline by default
-    margin: auto;
-    padding-top: 100px;
-
-    width: 80%;
-    max-width: 700px; //dont make image absurdly huge
-
-  }
-
-  .caption {
-    //same as image
-    display: block;
-    margin: 50px auto;
-    width: 80%; 
-    max-width: 700px;
-
-    padding: 10px;
-
-    border-radius: 10px;
-
-    text-align: center;
-    font-weight: bold;
-
-    @include wood.straight-grain-1-pine-light-bg(0deg);
-
-    color: wood.$ebony-dark0;
-
-  }
+  
 }
 
 .modal.visible {
-  display: block;
 
-  //Note that transition does not work because we are changing the display property.
-  //In order to scale the image from 0 to 100%, an animation should be used on the 
-  //image under the .modal.visible class so that once the class '.visible' gets added to .modal,
-  //the display property can be set first before performing the expand animation
-  .image, .close, .caption {
-    animation-name: expand;
-    animation-duration: 0.5s;
+  .popup {
+    display: block;
+
+    //Note that transition does not work because we are changing the display property.
+    //In order to scale the image from 0 to 100%, an animation should be used on the 
+    //image under the .modal.visible class so that once the class '.visible' gets added to .modal,
+    //the display property can be set first before performing the expand animation
+    .image, .close, .caption {
+      animation-name: expand;
+      animation-duration: 0.5s;
+    }
   }
+  
 }
 
 
@@ -93,8 +99,10 @@
 
 @media only screen and (max-width: 700px) {
   .modal {
-    .image {
-      width: 100%;
+    .popup {
+      .image {
+        width: 100%;
+      }
     }
   }
 }
